@@ -1,3 +1,9 @@
+2008-08-22  Gabor Csardi  <csardi@szaffi>
+
+	* src/decomposition.c (igraph_is_chordal) : added
+	* src/decomposition.c (igraph_maximum_cardinality_search) : 
+	API update, optionally it calculates the inverse of alpha
+
 2008-08-20  Gabor Csardi  <csardi@szaffi>
 
 	* src/decomposition.c (igraph_maximum_cardinality_search) : added
